--- a/config-data/usuario-service.yaml
+++ b/config-data/usuario-service.yaml
@@ -1,2 +1,14 @@
 server:
   port: 8001
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      default-zone: http://localhost:8761/eureka
+    instance:
+      hostname: localhost    
