--- a/moto-service/pom.xml
+++ b/moto-service/pom.xml
@@ -42,6 +42,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 			<version>3.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.0.3</version>
 		</dependency>	
 		<dependency>
 			<groupId>com.h2database</groupId>
