--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -1,5 +1,5 @@
 server:
-  port: ${PORT:0}
+  port: 8080
 eureka:
   client:
     fetch-registry: true
@@ -7,4 +7,25 @@ eureka:
     service-url:
       default-zone: http://localhost:8761/eureka
   instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    hostname: localhost
+
+spring:
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enable: true
+      routes:
+        - id: usuario-service
+          uri: lb://usuario-service
+          predicates:
+            - Path=/usuario/**
+        - id: moto-service
+          uri: lb://moto-service
+          predicates:
+            - Path=/moto/**
+        - id: carro-service
+          uri: lb://carro-service
+          predicates:
+            - Path=/carro/**        
+    
