--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -1,27 +1,10 @@
 server:
-  port: 8080
-  
+  port: 8080  
 eureka:
-  client:    
+  client:
+    fetch-registry: true
+    register-with-eureka: true    
     service-url:
       default-zone: http://localhost:8761/eureka
-
-spring:
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enable: true
-      routes:
-        - id: usuario-service
-          uri: lb://usuario-service
-          predicates:
-            - Path=/usuario/**
-        - id: carro-service
-          uri: lb://carro-service
-          predicates:
-            - Path=/carro/**
-        - id: moto-service
-          uri: lb://moto-service
-          predicates:
-            - Path=/moto/**
+  instance:
+    hostname: localhost
