--- a/usuario-service/pom.xml
+++ b/usuario-service/pom.xml
@@ -62,6 +62,14 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>			
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>	
+		</dependency>
 		
 		<dependency>
 			<groupId>com.h2database</groupId>
